cropper preview fix; services back buttons; fixes

--- a/site/templates/assets/css/custom-phase-2.css
+++ b/site/templates/assets/css/custom-phase-2.css
@@ -69,7 +69,7 @@
     max-width: 100%;
 }
 
-.img-cropper .preview {
+.preview {
     overflow: hidden;
     width: 200px;
     height: 200px;
